--- a/vignettes/run_example.Rmd
+++ b/vignettes/run_example.Rmd
@@ -45,9 +45,11 @@ Print a summary table of the orthodontist data.
 ```{r summary, warning=FALSE}
 # Data summary, stratified by Sex
 summary_res <- data_labelled[-1] %>%
-  modelLong::summary(data = .,
-                     group_var = "Sex",
-                     type = list(Age ~ "continuous"))
+  modelLong::summary(
+    data = .,
+    group_var = "Sex",
+    type = list(Age ~ "continuous"))
+
 summary_res$table1 
 ```
 
@@ -64,13 +66,11 @@ plot_res <- modelLong::plot(
   id = "Subject",
   group_var = "Sex")
 
-
 plot_res$data_plot +
   # Adjust labels and x-axis
   labs(title = "Repeated measures of tooth growth") +
   xlab("Age (years)") + ylab("Distance (mm)") +
   scale_x_continuous(breaks = seq(8,18,2))
-
 
 plot_res$acf_plot +
   # Adjust labels and x-axis
